Fixed height/alignment of modals

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -465,7 +465,7 @@ span.glyphicon-chevron-down {
   right: 0;
   bottom: 0;
   left: 0;
-  height: 500px;
+  height: 400px;
   width: 90%;
 }
 
